Fix leaderboard scroll list overflow

--- a/src/app/modules/find-friends/pages/find-friends/find-friends.component.scss
+++ b/src/app/modules/find-friends/pages/find-friends/find-friends.component.scss
@@ -8,21 +8,32 @@
   background-image: functions.image("activities-bg-2.jpg");
   height: 100vh;
 
-  .search-form {
-    padding-top: 2.5rem;
-    width: 100%;
+  .content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
-    .search-input {
-      @include mixins.my(0);
+    .search-form {
+      padding-top: 2.5rem;
       width: 100%;
-      border-radius: 0.5rem;
 
-      @include mixins.glass-effect(variables.$glass-lighter-bg);
+      .search-input {
+        @include mixins.my(0);
+        width: 100%;
+        border-radius: 0.5rem;
 
-      ::ng-deep .mat-form-field-wrapper {
-        padding: 0;
-        margin: 0;
+        @include mixins.glass-effect(variables.$glass-lighter-bg);
+
+        ::ng-deep .mat-form-field-wrapper {
+          padding: 0;
+          margin: 0;
+        }
       }
+    }
+
+    .user-list-wrapper {
+      flex: 1;
+      overflow: hidden
     }
   }
 }
